# blaze-server

./: Cargo.toml  aaaa.nbt  settings.toml
src/: main.rs  packet.rs  status.rs  varint.rs
src/packets/: login.rs  login_success.rs  mod.rs  status.rs
src/packets/play/: login_play.rs  mod.rs
src/utils/: mod.rs  packet.rs  player.rs  varint.rs
