[package]
name = "blaze-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
config = { version = "0.13.3", features = ["toml"] }
false = "0.0.0"
tokio = { version = "1.29.1", features = ["full"] }
